--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-scripts": "^3.0.1"
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
